test: add test cases for repository package